--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,30 @@
 <div class="d-flex">
-  <div class="bg-dark border-righ p-3" id="sidebar">
+  <!-- Sidebar -->
+  <div class="bg-dark border-right p-3" id="sidebar">
     <h3 class="text-light">Gifs-App</h3>
+    <hr class="text-right" />
+    <div class="list-group list-reset">
+      <a href="#" class="list-group-item list-group-item-action"> Dashboard </a>
+    </div>
   </div>
-  <div>Món</div>
+  <!-- End Sidebar -->
+
+  <div class="container">
+    <div class="row p-3">
+      <div class="col">
+        <h5>Buscar:</h5>
+        <input type="text" class="form-control" placeholder="Buscar gifs..." />
+      </div>
+    </div>
+    <hr />
+
+    <div class="row">
+      <div class="col">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit
+        voluptas nisi illo veritatis, ducimus porro quibusdam architecto ea quo
+        nostrum. Id totam porro itaque ullam consectetur cumque. Assumenda, rem
+        adipisci!
+      </div>
+    </div>
+  </div>
 </div>
