--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -2,6 +2,13 @@
   <h3 class="text-light">Gifs-App</h3>
   <hr class="text-right" />
   <div class="list-group list-reset">
-    <a href="#" class="list-group-item list-group-item-action"> Dashboard </a>
+    <a
+      href="#"
+      *ngFor="let str of historial"
+      class="list-group-item list-group-item-action"
+    >
+      {{ str }}
+    </a>
+    <!-- <a href="#" class="list-group-item list-group-item-action"> Dashboard </a> -->
   </div>
 </div>
