--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -6,6 +6,7 @@
       href="#"
       *ngFor="let str of historial"
       class="list-group-item list-group-item-action"
+      (click)="showResults(str)"
     >
       {{ str }}
     </a>
