--- a/src/app/gifs/resultados/resultados.component.html
+++ b/src/app/gifs/resultados/resultados.component.html
@@ -1,5 +1,9 @@
 <div class="row">
-  <div class="col-md-4 col-sm-6" *ngFor="let gif of results">
+  <!-- https://animate.style/ -->
+  <div
+    class="col-md-4 col-sm-6 animate__animated animate__backInUp"
+    *ngFor="let gif of results"
+  >
     <div class="card">
       <img
         src="{{ gif.images.downsized_medium.url }}"
